fixed overflow scrolling issue

--- a/style.css
+++ b/style.css
@@ -94,8 +94,8 @@ ul {
 .video-container, .text-container {
     overflow-y: auto;
     width: 100%;
-    height: 100%;
     padding: 16px;
+    padding-bottom: 128px;
     display: flex;
 }
 .video-container {
